Переклад на українську

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8" />
-    <title>Analytics Dashboard</title>
+    <title>Аналітична Панель</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="analytics.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
@@ -12,13 +12,13 @@
 <header class="header"></header>
 
 <main class="container">
-    <h2 class="mt-4">📊 Analytics Dashboard</h2>
+    <h2 class="mt-4">📊 Аналітична Панель</h2>
 
     <div class="filter-block">
-        <label>From: <input type="date" id="from-date" /></label>
-        <label>To: <input type="date" id="to-date" /></label>
-        <button id="apply-filter">Apply Filter</button>
-        <button id="reset-filter">Reset Filter</button>
+        <label>Від: <input type="date" id="from-date" /></label>
+        <label>До: <input type="date" id="to-date" /></label>
+        <button id="apply-filter">Застосувати фільтр</button>
+        <button id="reset-filter">Скинути фільтр</button>
     </div>
 
     <div class="chart-grid">
