--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Knowledge Base</title>
+    <title>База Знань</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
 <header class="header"></header>
 
 <main class="container">
-    <input type="text" id="searchInput" placeholder="Search articles..." />
+    <input type="text" id="searchInput" placeholder="Пошук статей..." />
     <div id="searchResults" class="search-results"></div>
     <div id="content" class="grid"></div>
 </main>
