--- a/public/manage-articles.html
+++ b/public/manage-articles.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Knowledge Base Editor</title>
+    <title>Редактор Бази Знань</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -133,70 +133,69 @@
 
 <main class="container">
     <div class="tab-container">
-        <button class="tab-button active" data-tab="articles">Articles</button>
-        <button class="tab-button" data-tab="categories">Categories</button>
+        <button class="tab-button active" data-tab="articles">Статті</button>
+        <button class="tab-button" data-tab="categories">Категорії</button>
     </div>
 
-    <!-- ARTICLES -->
     <div id="articles" class="tab-content active">
         <div class="editor-block">
-            <h2><i class="fas fa-book"></i> Article Editor</h2>
-            <h3 id="article-form-title">➕ Create Article</h3>
+            <h2><i class="fas fa-book"></i> Редактор Статей</h2>
+            <h3 id="article-form-title">➕ Створити Статтю</h3>
             <form id="article-form">
-                <label for="title">Title:</label>
+                <label for="title">Заголовок:</label>
                 <input type="text" id="title" required>
 
-                <label for="category">Category:</label>
+                <label for="category">Категорія:</label>
                 <select id="category" required></select>
 
-                <label for="priority">Priority (higher number = higher priority):</label>
+                <label for="priority">Пріоритет (більше число = вищий пріоритет):</label>
                 <input type="number" id="priority" value="0">
 
-                <label for="markdown">Markdown Text:</label>
-                <textarea id="markdown" placeholder="Write article content using Markdown..."></textarea>
+                <label for="markdown">Markdown Текст:</label>
+                <textarea id="markdown" placeholder="Напишіть текст статті у форматі Markdown..."></textarea>
 
-                <label><input type="checkbox" id="is-hidden"> Hidden</label>
+                <label><input type="checkbox" id="is-hidden"> Прихована</label>
 
                 <div>
-                    <button type="submit"><i class="fas fa-save"></i> Save</button>
-                    <button type="button" id="cancel-article-edit" class="cancel-btn" style="display: none;">Cancel editing</button>
+                    <button type="submit"><i class="fas fa-save"></i> Зберегти</button>
+                    <button type="button" id="cancel-article-edit" class="cancel-btn" style="display: none;">Скасувати редагування</button>
                 </div>
             </form>
             <div id="response-msg" class="response-message"></div>
         </div>
 
         <div class="editor-block">
-            <h2><i class="fas fa-newspaper"></i> Articles</h2>
+            <h2><i class="fas fa-newspaper"></i> Список Статей</h2>
             <ul id="article-list"></ul>
         </div>
     </div>
 
     <div id="categories" class="tab-content">
         <div class="editor-block">
-            <h2><i class="fas fa-folder"></i> Category Manager</h2>
-            <h3 id="category-form-title">➕ Create Category</h3>
+            <h2><i class="fas fa-folder"></i> Менеджер Категорій</h2>
+            <h3 id="category-form-title">➕ Створити Категорію</h3>
             <form id="category-form">
-                <label for="category-name">Category Name:</label>
+                <label for="category-name">Назва Категорії:</label>
                 <input type="text" id="category-name" required>
 
-                <label for="category-description">Description:</label>
+                <label for="category-description">Опис:</label>
                 <input type="text" id="category-description">
 
-                <label for="category-priority">Priority:</label>
+                <label for="category-priority">Пріоритет:</label>
                 <input type="number" id="category-priority" value="0">
 
-                <label><input type="checkbox" id="category-hidden"> Hidden</label>
+                <label><input type="checkbox" id="category-hidden"> Прихована</label>
 
                 <div>
-                    <button type="submit"><i class="fas fa-save"></i> Save</button>
-                    <button type="button" id="cancel-category-edit" class="cancel-btn" style="display: none;">Cancel editing</button>
+                    <button type="submit"><i class="fas fa-save"></i> Зберегти</button>
+                    <button type="button" id="cancel-category-edit" class="cancel-btn" style="display: none;">Скасувати редагування</button>
                 </div>
             </form>
             <div id="category-response" class="response-message"></div>
         </div>
 
         <div class="editor-block">
-            <h2><i class="fas fa-layer-group"></i> Categories</h2>
+            <h2><i class="fas fa-layer-group"></i> Список Категорій</h2>
             <ul id="category-list"></ul>
         </div>
     </div>
