--- a/public/manage-roles.html
+++ b/public/manage-roles.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Manage Roles</title>
+    <title>Керування Ролями</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -69,20 +69,20 @@
 
 <main class="container">
     <div class="role-form-block">
-        <h2><i class="fas fa-user-shield"></i> Manage Support Roles</h2>
+        <h2><i class="fas fa-user-shield"></i> Керування Ролями Підтримки</h2>
         <form id="role-form">
-            <label for="staff-email">Staff Email:</label>
+            <label for="staff-email">Email Співробітника:</label>
             <input type="email" id="staff-email" required placeholder="user@example.com">
 
-            <label for="new-role">Select Role:</label>
+            <label for="new-role">Оберіть Роль:</label>
             <select id="new-role" required>
-                <option value="junior">Junior</option>
-                <option value="senior">Senior</option>
-                <option value="admin">Admin</option>
-                <option value="fired">Fired</option>
+                <option value="junior">Молодший</option>
+                <option value="senior">Старший</option>
+                <option value="admin">Адміністратор</option>
+                <option value="fired">Звільнений</option>
             </select>
 
-            <button type="submit"><i class="fas fa-check-circle"></i> Apply Role</button>
+            <button type="submit"><i class="fas fa-check-circle"></i> Застосувати Роль</button>
         </form>
 
         <div id="response-msg" class="response-message"></div>
