--- a/public/my-tickets.html
+++ b/public/my-tickets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>My Tickets</title>
+    <title>Мої Звернення</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -85,15 +85,15 @@
 <header class="header"></header>
 
 <main class="container">
-    <h2><i class="fas fa-ticket-alt"></i> My Support Tickets</h2>
+    <h2><i class="fas fa-ticket-alt"></i> Мої Звернення до Підтримки</h2>
 
     <div class="filter-section">
-        <label for="filter">Status:</label>
+        <label for="filter">Статус:</label>
         <select id="filter">
-            <option value="">All</option>
-            <option value="open">Open</option>
-            <option value="in_progress">In Progress</option>
-            <option value="closed">Closed</option>
+            <option value="">Усі</option>
+            <option value="open">Відкриті</option>
+            <option value="in_progress">У процесі</option>
+            <option value="closed">Закриті</option>
         </select>
     </div>
 
@@ -105,7 +105,6 @@
 <script>
     const emailCookie = document.cookie.split('; ').find(c => c.startsWith('user_email='));
     const userEmail = emailCookie ? decodeURIComponent(emailCookie.split('=')[1]) : null;
-
 
     async function loadTickets() {
         const status = document.getElementById('filter').value;
@@ -124,13 +123,13 @@
                 <span class="status ${statusClass}">${ticket.status}</span>
                 <div class="ticket-title">${ticket.title}</div>
                 <div class="ticket-info">
-                    Created: ${new Date(ticket.creation_date).toLocaleDateString()}
+                    Створено: ${new Date(ticket.creation_date).toLocaleDateString()}
                 </div>
                 <div class="ticket-update">
-                    Last update: ${ticket.last_message_date ? new Date(ticket.last_message_date).toLocaleDateString() : '—'}
+                    Останнє оновлення: ${ticket.last_message_date ? new Date(ticket.last_message_date).toLocaleDateString() : '—'}
                 </div>
                 <div class="ticket-info">
-                    ${ticket.last_message ? ticket.last_message.slice(0, 80) + '...' : 'No messages yet'}
+                    ${ticket.last_message ? ticket.last_message.slice(0, 80) + '...' : 'Повідомлень ще немає'}
                 </div>
             `;
 
@@ -144,7 +143,7 @@
     if (userEmail) {
         loadTickets();
     } else {
-        document.getElementById('tickets').innerHTML = '<p>Please log in to view your tickets.</p>';
+        document.getElementById('tickets').innerHTML = '<p>Будь ласка, увійдіть у систему, щоб переглянути звернення.</p>';
     }
 </script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
