--- a/public/support-chat.html
+++ b/public/support-chat.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Support Chat</title>
+    <title>Чат Підтримки</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -157,31 +157,31 @@
         <div id="ticket-fields" class="ticket-fields"></div>
 
         <div class="admin-actions">
-            <h3><i class="fas fa-tools"></i> Ticket Admin Panel</h3>
+            <h3><i class="fas fa-tools"></i> Панель Адміністратора Тікету</h3>
             <div class="form-group">
-                <label for="ticket-status">Status:</label>
+                <label for="ticket-status">Статус:</label>
                 <select id="ticket-status">
-                    <option value="open">Open</option>
-                    <option value="in_progress">In Progress</option>
-                    <option value="closed">Closed</option>
+                    <option value="open">Відкритий</option>
+                    <option value="in_progress">В обробці</option>
+                    <option value="closed">Закритий</option>
                 </select>
-                <button id="change-status-btn">Change</button>
+                <button id="change-status-btn">Змінити</button>
             </div>
             <div class="form-group">
-                <label for="ticket-note">Internal note:</label>
-                <textarea id="ticket-note" placeholder="Support-only notes..."></textarea>
-                <button id="save-note-btn">Save Note</button>
+                <label for="ticket-note">Внутрішня нотатка:</label>
+                <textarea id="ticket-note" placeholder="Примітки тільки для підтримки..."></textarea>
+                <button id="save-note-btn">Зберегти нотатку</button>
             </div>
-            <button id="block-user-btn" class="danger-btn"><i class="fas fa-ban"></i> Block User</button>
+            <button id="block-user-btn" class="danger-btn"><i class="fas fa-ban"></i> Заблокувати Користувача</button>
         </div>
     </div>
 
     <div class="right-column">
         <div id="chat-messages" class="chat-container"></div>
         <div id="reply-section" class="reply-form hidden">
-            <textarea id="reply-text" placeholder="Enter your message..."></textarea>
+            <textarea id="reply-text" placeholder="Введіть повідомлення..."></textarea>
             <input type="file" id="message-file">
-            <button id="send-reply">Send <i class="fas fa-paper-plane"></i></button>
+            <button id="send-reply">Надіслати <i class="fas fa-paper-plane"></i></button>
         </div>
     </div>
 </main>
